<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLastnameWarn"
        android:layout_width="172dp"
        android:layout_height="72dp"
        android:text="@string/txtViewLastnameWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextLastname"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurnameWarn" />

    <TextView
        android:id="@+id/textViewPassInpWarn"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:text="@string/txtViewPassInpWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextPassInp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassInp" />

    <TextView
        android:id="@+id/textViewBirthdateWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewBirthdateWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthdate" />

    <TextView
        android:id="@+id/textViewPassCheckWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewPassCheckWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextPassCheck"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassCheck" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="165dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtViewName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameWarn"
        android:layout_width="172dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtViewNameWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSurnameWarn"
        android:layout_width="172dp"
        android:layout_height="72dp"
        android:text="@string/txtViewSurnameWarn"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextSurname"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameWarn" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="165dp"
        android:layout_height="24dp"
        android:text="@string/txtViewSurname"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewLastname"
        android:layout_width="165dp"
        android:layout_height="24dp"
        android:text="@string/txtViewLastname"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastname"
        app:layout_constraintStart_toStartOf="@+id/textViewSurname"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <TextView
        android:id="@+id/textViewPassInp"
        android:layout_width="165dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtViewPassInp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassInp"
        app:layout_constraintStart_toStartOf="@+id/textViewBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthdate" />

    <TextView
        android:id="@+id/textViewPassCheck"
        android:layout_width="165dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtViewPassCheck"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPassInp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPassCheck"
        app:layout_constraintTop_toTopOf="@+id/textViewPassInp" />

    <TextView
        android:id="@+id/textViewBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txtViewBirthdate"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewLastname"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastname" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLastname"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurname"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextPassInp"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassInp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextPassCheck"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassInp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPassInp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassInp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewBirthdate"
        app:layout_constraintStart_toStartOf="@+id/editTextSurname"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastname"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassInp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBirthdate"
        app:layout_constraintStart_toStartOf="@+id/editTextLastname"
        app:layout_constraintTop_toBottomOf="@+id/textViewBirthdate"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonBirthdate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btnBirthdate"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBirthdate"
        app:layout_constraintStart_toEndOf="@+id/editTextBirthdate"
        app:layout_constraintTop_toTopOf="@+id/editTextBirthdate"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="373dp"
        android:layout_height="52dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>